[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tool"]

[project]
name = "weather-tool"
version = "1.0.0"
description = "Weather tool for Atomic Agents (Open-Meteo, no API key required)"
readme = "README.md"
authors = [
    { name = "Kenny Vaneetvelde", email = "kenny.vaneetvelde@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "atomic-agents",
    "pydantic>=2.10.3,<3.0.0",
    "requests>=2.32.3,<3.0.0",
]

[dependency-groups]
dev = [
    "coverage>=7.6.1,<8.0.0",
    "pytest>=8.3.3,<9.0.0",
    "pytest-cov>=5.0.0,<6.0.0",
]

[tool.uv.sources]
atomic-agents = { workspace = true }
