[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tool"]

[project]
name = "webpage-scraper"
version = "1.0.0"
description = "Tool for scraping webpage content and converting it to markdown format"
readme = "README.md"
authors = [
    { name = "Kenny Vaneetvelde", email = "kenny.vaneetvelde@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "atomic-agents",
    "pydantic>=2.10.3,<3.0.0",
    "beautifulsoup4>=4.12.0,<5.0.0",
    "markdownify>=0.11.0,<1.0.0",
    "readability-lxml>=0.8.1,<1.0.0",
    "requests>=2.31.0,<3.0.0",
    "lxml>=5.1.0,<6.0.0",
    "lxml-html-clean>=0.3.1,<1.0.0",
]

[dependency-groups]
dev = [
    "coverage>=7.6.1,<8.0.0",
    "pytest-cov>=5.0.0,<6.0.0",
    "pytest>=8.3.3,<9.0.0",
]

[tool.uv.sources]
atomic-agents = { workspace = true }
