[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tool"]

[project]
name = "youtube-transcript-scraper"
version = "1.0.0"
description = "A tool for fetching and processing YouTube video transcripts"
readme = "README.md"
authors = [
    { name = "Kenny Vaneetvelde", email = "kenny.vaneetvelde@gmail.com" }
]
requires-python = ">=3.12,<3.14"
dependencies = [
    "atomic-agents",
    "pydantic>=2.10.3,<3.0.0",
    "google-api-python-client>=2.118.0,<3.0.0",
    "youtube-transcript-api>=1.1.1,<2.0.0",
]

[dependency-groups]
dev = [
    "coverage>=7.6.1,<8.0.0",
    "pytest>=8.3.3,<9.0.0",
    "pytest-cov>=5.0.0,<6.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "rich>=13.7.0,<14.0.0",
]

[tool.uv.sources]
atomic-agents = { workspace = true }
